--- a/_posts/2014-11-27-fx_ma_data.md
+++ b/_posts/2014-11-27-fx_ma_data.md
@@ -1,9 +1,34 @@
 ---
 layout: post
-title: 5日と25日の移動平均線データ
+title: 移動平均線データ 短期5日,長期25日
 tag: fx
 date: 2014-11-27 11:41:22
 ---
 
-hoge
+単純なクロス交差法
+5年分(2009/10-2014/10)
+利食い 500, 損切り 1000で固定
 
+- 日足
+<img src="Simple_MA2_test1_USDJPY_D1.gif" width="820" height="200" border="0">
+
+- 4時間足
+<img src="Simple_MA2_test1_USDJPY_H4.gif" width="820" height="200" border="0">
+
+- 1時間足
+<img src="Simple_MA2_test1_USDJPY_H1.gif" width="820" height="200" border="0">
+
+- 30分足
+<img src="Simple_MA2_test1_USDJPY_M30.gif" width="820" height="200" border="0">
+
+- 15分足
+<img src="Simple_MA2_test1_USDJPY_M15.gif" width="820" height="200" border="0">
+
+- 5分足
+<img src="Simple_MA2_test1_USDJPY_M5.gif" width="820" height="200" border="0">
+
+- 1分足
+<img src="Simple_MA2_test1_USDJPY_M1.gif" width="820" height="200" border="0">
+
+こんな単純なプログラムでも1時間足で利益が出てるのが意外。
+結構ランダムでドローダウンもあるから微妙だけど。
