--- a/_posts/2014-11-27-fx_ma_data.md
+++ b/_posts/2014-11-27-fx_ma_data.md
@@ -10,7 +10,7 @@ date: 2014-11-27 11:41:22
 利食い 500, 損切り 1000で固定
 
 - 日足
-<img src="Simple_MA2_test1_USDJPY_D1.gif" width="820" height="200" border="0">
+![Nissoku]({{ site.url }}/assets/screenshot.jpg)
 
 - 4時間足
 <img src="Simple_MA2_test1_USDJPY_H4.gif" width="820" height="200" border="0">
