--- a/_posts/2014-11-27-fx_ma_data.md
+++ b/_posts/2014-11-27-fx_ma_data.md
@@ -10,25 +10,25 @@ date: 2014-11-27 11:41:22
 利食い 500, 損切り 1000で固定
 
 - 日足
-![Nissoku]({{ site.url }}/assets/screenshot.jpg)
+![日足]({{ site.url }}/assets/simple_ma2/Simple_MA2_test1_USDJPY_D1.gif)
 
 - 4時間足
-<img src="Simple_MA2_test1_USDJPY_H4.gif" width="820" height="200" border="0">
+![4時間足]({{ site.url }}/assets/simple_ma2/Simple_MA2_test1_USDJPY_H4.gif)
 
 - 1時間足
-<img src="Simple_MA2_test1_USDJPY_H1.gif" width="820" height="200" border="0">
+![1時間足]({{ site.url }}/assets/simple_ma2/Simple_MA2_test1_USDJPY_H1.gif)
 
 - 30分足
-<img src="Simple_MA2_test1_USDJPY_M30.gif" width="820" height="200" border="0">
+![30分足]({{ site.url }}/assets/simple_ma2/Simple_MA2_test1_USDJPY_M30.gif)
 
 - 15分足
-<img src="Simple_MA2_test1_USDJPY_M15.gif" width="820" height="200" border="0">
+![15分足]({{ site.url }}/assets/simple_ma2/Simple_MA2_test1_USDJPY_M15.gif)
 
 - 5分足
-<img src="Simple_MA2_test1_USDJPY_M5.gif" width="820" height="200" border="0">
+![5分足]({{ site.url }}/assets/simple_ma2/Simple_MA2_test1_USDJPY_M5.gif)
 
 - 1分足
-<img src="Simple_MA2_test1_USDJPY_M1.gif" width="820" height="200" border="0">
+![1分足]({{ site.url }}/assets/simple_ma2/Simple_MA2_test1_USDJPY_M1.gif)
 
 こんな単純なプログラムでも1時間足で利益が出てるのが意外。
 結構ランダムでドローダウンもあるから微妙だけど。
