--- a/_posts/2014-11-27-fx_ma_data.md
+++ b/_posts/2014-11-27-fx_ma_data.md
@@ -9,25 +9,32 @@ date: 2014-11-27 11:41:22
 5年分(2009/10-2014/10)  
 利食い 500, 損切り 1000で固定  
 
-### 日足
+#### 日足
+PF 0.95, Drawdown 7.96%
 ![日足]({{ site.url }}/assets/simple_ma2/Simple_MA2_test1_USDJPY_D1.gif)  
 
-### 4時間足
+#### 4時間足
+PF 1.05, Drawdown 7.65%
 ![4時間足]({{ site.url }}/assets/simple_ma2/Simple_MA2_test1_USDJPY_H4.gif)  
 
-### 1時間足
+#### 1時間足
+PF 1.07, Drawdown 11.69%
 ![1時間足]({{ site.url }}/assets/simple_ma2/Simple_MA2_test1_USDJPY_H1.gif)  
 
-### 30分足
+#### 30分足
+PF 0.91, Drawdown 37.91%
 ![30分足]({{ site.url }}/assets/simple_ma2/Simple_MA2_test1_USDJPY_M30.gif)  
 
-### 15分足
+#### 15分足
+PF 0.88, Drawdown 67.78%
 ![15分足]({{ site.url }}/assets/simple_ma2/Simple_MA2_test1_USDJPY_M15.gif)  
 
-### 5分足
+#### 5分足
+PF 0.78, Drawdown 96.01%
 ![5分足]({{ site.url }}/assets/simple_ma2/Simple_MA2_test1_USDJPY_M5.gif)  
 
-### 1分足
+#### 1分足
+PF 0.63, Drawdown 96.00%
 ![1分足]({{ site.url }}/assets/simple_ma2/Simple_MA2_test1_USDJPY_M1.gif)  
 
 こんな単純なプログラムでも1時間足で利益が出てるのが意外。  
