--- a/_posts/2014-11-27-fx_ma_data.md
+++ b/_posts/2014-11-27-fx_ma_data.md
@@ -6,7 +6,7 @@ date: 2014-11-27 11:41:22
 ---
 
 単純なクロス交差法  
-5年分(2009/10-2014/10)  
+USDJPY 5年分(2009/10-2014/10)  
 利食い 500, 損切り 1000で固定  
 
 #### 日足
