--- a/_posts/2014-11-28-fx_ma_st.md
+++ b/_posts/2014-11-28-fx_ma_st.md
@@ -9,9 +9,9 @@ date: 2014-11-28 20:07:20
 USDJPY 5年分(2009/10-2014/10)  
 利食い 500, 損切り 1000で固定  
 
-ゴールデンクロスしたときに、過去7本以内に売られ過ぎ(<30)があったら買い。
-デッドクロスしたときに、過去7本以内に買われ過ぎ(>70)があったら売り。
-移動平均が再びクロスしたら手仕舞。
+ゴールデンクロスしたときに、過去7本以内に売られ過ぎ(<30)があったら買い  
+デッドクロスしたときに、過去7本以内に買われ過ぎ(>70)があったら売り  
+移動平均が再びクロスしたら手仕舞  
 
 #### 日足
 ![日足]({{ site.url }}/assets/ma_st/MA_ST_ma_st_USDJPY_D1.gif)  
@@ -20,6 +20,7 @@ USDJPY 5年分(2009/10-2014/10)
 ![4時間足]({{ site.url }}/assets/ma_st/MA_ST_ma_st_USDJPY_H4.gif)  
   
 #### 1時間足
+PF 1.35, Drawdown 3.87%
 ![1時間足]({{ site.url }}/assets/ma_st/MA_ST_ma_st_USDJPY_H1.gif)  
   
 #### 30分足
@@ -33,3 +34,6 @@ USDJPY 5年分(2009/10-2014/10)
   
 #### 1分足
 ![1分足]({{ site.url }}/assets/ma_st/MA_ST_ma_st_USDJPY_M1.gif)  
+
+条件を満たす確率が低すぎる。
+1時間足はマシな値が出てるがサンプルが少なすぎる。
