--- a/_posts/2014-11-28-fx_ma_adx.md
+++ b/_posts/2014-11-28-fx_ma_adx.md
@@ -15,7 +15,7 @@ USDJPY 5年分(2009/10-2014/10)
 -> その後-DIが+DIをゴールデンクロス -> 売り  
 移動平均が再びクロスしたら手仕舞  
 
-こりゃまた条件を満たす確率が低すぎる。  
+これはボツだな...あと条件を満たす確率も低い。  
 
 #### 日足
 ![日足]({{ site.url }}/assets/adx_ma/ADX_MA_adx_ma_USDJPY_D1.gif)  
