--- a/_posts/2014-11-28-fx_ma_adx.md
+++ b/_posts/2014-11-28-fx_ma_adx.md
@@ -7,7 +7,7 @@ date: 2014-11-28 21:23:20
 
 5日/25日クロス交差法 + ADX(14日)  
 USDJPY 5年分(2009/10-2014/10)  
-利食い 500, 損切り 1000で固定  
+利食い 500, 損切り 1000, スプレッド 10で固定  
 
 移動平均がゴールデンクロス -> 過去10本以内にADXが-DIをゴールデンクロス  
 -> その後+DIが-DIをゴールデンクロス -> 買い  
