--- a/_posts/2014-11-29-fx_macd_st.md
+++ b/_posts/2014-11-29-fx_macd_st.md
@@ -5,13 +5,15 @@ tag: metatrader
 date: 2014-11-29 15:22:00
 ---
 
-5日/25日クロス交差法 + ストキャスティクス(%K=5, %D=3, Slow%D=3)  
+MACD(短期EMA 12日、長期EMA 26日、MACDシグナル 7日 + ストキャスティクス(%K=5, %D=3, Slow%D=3)  
 USDJPY 5年分(2009/10-2014/10)  
 利食い 500, 損切り 1000, スプレッド 10で固定  
 
-ゴールデンクロスしたときに、過去7本以内に売られ過ぎ(<30)があったら買い  
-デッドクロスしたときに、過去7本以内に買われ過ぎ(>70)があったら売り  
-移動平均が再びクロスしたら手仕舞  
+短期が長期をゴールデンクロス、シグナルが0以下、過去7本以内に売られ過ぎ(<20)があったら買い  
+短期が長期をデッドクロス、シグナルが0以上、過去7本以内に買われ過ぎ(>70)があったら売り  
+MACDが再びクロスしたら手仕舞  
+
+こりゃまた使い物にならんな。
 
 #### 日足
 ![日足]({{ site.url }}/assets/macd_st/MACD_ST_macd_st_USDJPY_D1.gif)  
