--- a/_posts/2014-11-29-ma200_100_rate.md
+++ b/_posts/2014-11-29-ma200_100_rate.md
@@ -5,8 +5,15 @@ tag: metatrader
 date: 2014-11-29 16:17:00
 ---
 
+下記URLに書いてある話を本当か？と思いながら実装してみた。
+MACDは使用していない。移動平均200日, 100日と為替レートのみ。
+https://www.gaitameonline.com/academy_chart08.jsp
+
 USDJPY 5年分(2009/10-2014/10)  
 利食い 1000, 損切り 1000, スプレッド 10で固定  
+
+超長期の移動平均を使うだけあって売買頻度は少ないが
+1時間足では割と良い結果が出ている。
 
 #### 日足
 ![日足]({{ site.url }}/assets/ma200_100_rate/MA200_100_RATE_ma200_100_rate_USDJPY_D1.gif)  
