--- a/_posts/2014-11-29-ma200_100_rate.md
+++ b/_posts/2014-11-29-ma200_100_rate.md
@@ -5,14 +5,14 @@ tag: metatrader
 date: 2014-11-29 16:17:00
 ---
 
-下記URLに書いてある話を本当か？と思いながら実装してみた。
-MACDは使用していない。移動平均200日, 100日と為替レートのみ。
-https://www.gaitameonline.com/academy_chart08.jsp
+下記URLに書いてある話を本当か？と思いながら実装してみた。  
+MACDは使用していない。移動平均200日, 100日と為替レートのみ。  
+[https://www.gaitameonline.com/academy_chart08.jsp](https://www.gaitameonline.com/academy_chart08.jsp)
 
 USDJPY 5年分(2009/10-2014/10)  
 利食い 1000, 損切り 1000, スプレッド 10で固定  
 
-超長期の移動平均を使うだけあって売買頻度は少ないが
+超長期の移動平均を使うだけあって売買頻度は少ないが  
 1時間足では割と良い結果が出ている。
 
 #### 日足
@@ -22,6 +22,7 @@ USDJPY 5年分(2009/10-2014/10)
 ![4時間足]({{ site.url }}/assets/ma200_100_rate/MA200_100_RATE_ma200_100_rate_USDJPY_H4.gif)  
   
 #### 1時間足
+PF 1.38, Drawdown 8.00%
 ![1時間足]({{ site.url }}/assets/ma200_100_rate/MA200_100_RATE_ma200_100_rate_USDJPY_H1.gif)  
 
 #### 30分足
