--- a/_posts/2014-12-02-ma_stop.md
+++ b/_posts/2014-12-02-ma_stop.md
@@ -15,6 +15,11 @@ date: 2014-12-02 22:18:40
 USDJPY 5年分(2009/10-2014/10)  
 スプレッド 10で固定, 1時間足のみ(1番成果が良かったから)  
 
+驚くほど結果に差異がないな...  
+まぁ、そもそもの利益が大してないからだろう。  
+もっとPFが高いEAが作れたらまた考えよう。  
+色んなパラメータを変えてのテスト自体は重要なので。
+
 #### 利食い 500, 損切り 1000
 ![]({{ site.url }}/assets/ma_stop/Simple_MA_stop_t1_USDJPY_H1.gif)  
   
